ModLoader improvements.